@@ -22,7 +22,7 @@ import com.devee.devhive.domain.user.favorite.service.FavoriteService;
 import com.devee.devhive.domain.user.service.UserBadgeService;
 import com.devee.devhive.domain.user.service.UserService;
 import com.devee.devhive.domain.user.service.UserTechStackService;
-import com.devee.devhive.global.security.service.PrincipalDetails;
+import com.devee.devhive.global.entity.PrincipalDetails;
 import jakarta.validation.Valid;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -46,131 +46,126 @@ import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
 
 /**
- * 마이페이지 - 내 프로필, 비밀번호 변경
- * 랭킹 목록 페이지
- * 다른 유저 프로필 페이지
+ * 마이페이지 - 내 프로필, 비밀번호 변경 랭킹 목록 페이지 다른 유저 프로필 페이지
  */
 @RestController
 @RequestMapping("/api/users")
 @RequiredArgsConstructor
 public class UserController {
 
-    private final UserService userService;
-    private final FavoriteService favoriteService;
-    private final UserTechStackService userTechStackService;
-    private final CareerService careerService;
-    private final UserBadgeService userBadgeService;
-    private final ProjectMemberService projectMemberService;
-    private final ExitHistoryService exitHistoryService;
-    private final ProjectReviewService projectReviewService;
+  private final UserService userService;
+  private final FavoriteService favoriteService;
+  private final UserTechStackService userTechStackService;
+  private final CareerService careerService;
+  private final UserBadgeService userBadgeService;
+  private final ProjectMemberService projectMemberService;
+  private final ExitHistoryService exitHistoryService;
+  private final ProjectReviewService projectReviewService;
 
-    // 다른 유저 정보 조회
-    @GetMapping("/{userId}")
-    public ResponseEntity<UserInfoDto> getUserInfo(@PathVariable("userId") Long targetUserId) {
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        User targetUser = userService.getUserById(targetUserId);
-        UserInformationDto informationDto = getUserInformation(targetUserId);
-        boolean isFavorite = false;
+  // 다른 유저 정보 조회
+  @GetMapping("/{userId}")
+  public ResponseEntity<UserInfoDto> getUserInfo(@PathVariable("userId") Long targetUserId) {
+    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+    User targetUser = userService.getUserById(targetUserId);
+    UserInformationDto informationDto = getUserInformation(targetUserId);
+    boolean isFavorite = false;
 
-        if (authentication != null && !(authentication instanceof AnonymousAuthenticationToken)) {
-            // 로그인한 상태일 때 동작
-            PrincipalDetails details = (PrincipalDetails) authentication.getPrincipal();
-            User loggedInUser = details.getUser();
-            isFavorite = favoriteService.isFavorite(loggedInUser.getId(), targetUserId);
-        }
-
-        return ResponseEntity.ok(UserInfoDto.of(targetUser, informationDto, isFavorite));
+    if (authentication != null && !(authentication instanceof AnonymousAuthenticationToken)) {
+      // 로그인한 상태일 때 동작
+      PrincipalDetails details = (PrincipalDetails) authentication.getPrincipal();
+      User loggedInUser = userService.getUserByEmail(details.getEmail());
+      isFavorite = favoriteService.isFavorite(loggedInUser.getId(), targetUserId);
     }
 
-    // 내 정보 조회
-    @GetMapping("/my-profile")
-    public ResponseEntity<MyInfoDto> getMyInfo(@AuthenticationPrincipal PrincipalDetails principal){
-        User user = principal.getUser();
-        UserInformationDto informationDto = getUserInformation(user.getId());
+    return ResponseEntity.ok(UserInfoDto.of(targetUser, informationDto, isFavorite));
+  }
 
-        return ResponseEntity.ok(MyInfoDto.of(user, informationDto));
-    }
+  // 내 정보 조회
+  @GetMapping("/my-profile")
+  public ResponseEntity<MyInfoDto> getMyInfo(@AuthenticationPrincipal PrincipalDetails principal) {
+    User user = userService.getUserByEmail(principal.getEmail());
+    UserInformationDto informationDto = getUserInformation(user.getId());
 
-    // 내 기본 정보 수정
-    @PutMapping("/my-profile/basic")
-    public void updateBasicInfo(
-        @AuthenticationPrincipal PrincipalDetails principal,
-        @RequestBody @Valid UpdateBasicInfoForm form
-    ) {
-        User user = principal.getUser();
-        userService.updateBasicInfo(user, form);
-    }
+    return ResponseEntity.ok(MyInfoDto.of(user, informationDto));
+  }
 
-    // 비밀번호 변경
-    @PutMapping("/password")
-    public void updatePassword(
-        @AuthenticationPrincipal PrincipalDetails principal,
-        @RequestBody @Valid UpdatePasswordForm form
-    ) {
-        User user = principal.getUser();
-        userService.updatePassword(user, form);
-    }
+  // 내 기본 정보 수정
+  @PutMapping("/my-profile/basic")
+  public void updateBasicInfo(
+      @AuthenticationPrincipal PrincipalDetails principal,
+      @RequestBody @Valid UpdateBasicInfoForm form
+  ) {
+    User user = userService.getUserByEmail(principal.getEmail());
+    userService.updateBasicInfo(user, form);
+  }
 
-    // 내 기타 정보 수정 (기술스택, 경력)
-    @PutMapping("/my-profile/etc")
-    public void updateEtcInfo(
-        @AuthenticationPrincipal PrincipalDetails principal,
-        @RequestBody UpdateEtcInfoForm form
-    ) {
-        User user = principal.getUser();
-        userTechStackService.updateTechStacks(user, form.getTechStacks());
-        careerService.updateCareers(user, form.getCareerDtoList());
-    }
+  // 비밀번호 변경
+  @PutMapping("/password")
+  public void updatePassword(
+      @AuthenticationPrincipal PrincipalDetails principal,
+      @RequestBody @Valid UpdatePasswordForm form
+  ) {
+    User user = userService.getUserByEmail(principal.getEmail());
+    userService.updatePassword(user, form);
+  }
 
-    // 내 프로필 사진 수정
-    @PutMapping("/my-profile/image")
-    public void updateProfileImage(
-        @RequestPart(value = "image", required = false) MultipartFile multipartFile,
-        @AuthenticationPrincipal PrincipalDetails principal
-    ) {
-        User user = principal.getUser();
-        userService.updateProfileImage(multipartFile, user);
-    }
+  // 내 기타 정보 수정 (기술스택, 경력)
+  @PutMapping("/my-profile/etc")
+  public void updateEtcInfo(
+      @AuthenticationPrincipal PrincipalDetails principal,
+      @RequestBody UpdateEtcInfoForm form
+  ) {
+    User user = userService.getUserByEmail(principal.getEmail());
+    userTechStackService.updateTechStacks(user, form.getTechStacks());
+    careerService.updateCareers(user, form.getCareerDtoList());
+  }
 
-    // 내 프로필 사진 삭제
-    @DeleteMapping("/my-profile/image")
-    public void deleteProfileImage(@AuthenticationPrincipal PrincipalDetails principal) {
-        User user = principal.getUser();
-        userService.deleteProfileImage(user);
-    }
+  // 내 프로필 사진 수정
+  @PutMapping("/my-profile/image")
+  public void updateProfileImage(
+      @RequestPart(value = "image", required = false) MultipartFile multipartFile,
+      @AuthenticationPrincipal PrincipalDetails principal
+  ) {
+    User user = userService.getUserByEmail(principal.getEmail());
+    userService.updateProfileImage(multipartFile, user);
+  }
 
-    // 랭킹 목록 페이징 처리
-    @GetMapping("/rank")
-    public ResponseEntity<Page<RankUserDto>> getRankUsers() {
-        Pageable pageable = PageRequest.of(0, 3);
-        return ResponseEntity.ok(
-            userService.getRankUsers(pageable).map(RankUserDto::from)
-        );
-    }
+  // 내 프로필 사진 삭제
+  @DeleteMapping("/my-profile/image")
+  public void deleteProfileImage(@AuthenticationPrincipal PrincipalDetails principal) {
+    User user = userService.getUserByEmail(principal.getEmail());
+    userService.deleteProfileImage(user);
+  }
 
-    private UserInformationDto getUserInformation(Long userId) {
-        List<TechStackDto> techStacks = userTechStackService.getUserTechStacks(userId).stream()
-            .map(userTechStack -> TechStackDto.from(userTechStack.getTechStack()))
-            .collect(Collectors.toList());
-        List<CareerDto> careers = careerService.getUserCareers(userId).stream()
-            .map(CareerDto::from)
-            .collect(Collectors.toList());
-        List<BadgeDto> badges = userBadgeService.getUserBadges(userId).stream()
-            .map(badge -> BadgeDto.from(badge.getBadge()))
-            .collect(Collectors.toList());
+  // 랭킹 목록 페이징 처리
+  @GetMapping("/rank")
+  public ResponseEntity<Page<RankUserDto>> getRankUsers() {
+    Pageable pageable = PageRequest.of(0, 3);
+    return ResponseEntity.ok(userService.getRankUsers(pageable).map(RankUserDto::from));
+  }
 
-        List<Project> projects = projectMemberService.findAllByUserId(userId).stream()
-            .map(ProjectMember::getProject)
-            .toList();
-        List<ProjectHistoryDto> projectHistories =
-            projects.stream().map(project -> ProjectHistoryDto.of(
-                project.getName(),
-                projectReviewService.getAverageTotalScoreByTargetUserAndProject(userId,project.getId()))
-            ).collect(Collectors.toList());
+  private UserInformationDto getUserInformation(Long userId) {
+    List<TechStackDto> techStacks = userTechStackService.getUserTechStacks(userId).stream()
+        .map(userTechStack -> TechStackDto.from(userTechStack.getTechStack()))
+        .collect(Collectors.toList());
+    List<CareerDto> careers = careerService.getUserCareers(userId).stream()
+        .map(CareerDto::from)
+        .collect(Collectors.toList());
+    List<BadgeDto> badges = userBadgeService.getUserBadges(userId).stream()
+        .map(badge -> BadgeDto.from(badge.getBadge()))
+        .collect(Collectors.toList());
 
-        int hiveLevel = projectMemberService.countCompletedProjectsByUserId(userId);
-        int exitNum = exitHistoryService.countExitHistoryByUserId(userId);
+    List<Project> projects = projectMemberService.findAllByUserId(userId).stream()
+        .map(ProjectMember::getProject)
+        .toList();
+    List<ProjectHistoryDto> projectHistories =
+        projects.stream().map(project -> ProjectHistoryDto.of(project.getName(),
+            projectReviewService.getAverageTotalScoreByTargetUserAndProject(userId, project.getId()))
+        ).collect(Collectors.toList());
 
-        return UserInformationDto.of(techStacks, careers, badges, projectHistories, hiveLevel, exitNum);
-    }
+    int hiveLevel = projectMemberService.countCompletedProjectsByUserId(userId);
+    int exitNum = exitHistoryService.countExitHistoryByUserId(userId);
+
+    return UserInformationDto.of(techStacks, careers, badges, projectHistories, hiveLevel, exitNum);
+  }
 }
